1999-02-27  Seth Alves  <alves@hungry.com>

	* app/display.c (display_set_menu_sensitivity): no Edit/Delete
	menu when built with --enable-gnome

	* app/interface.c (create_display_shell): build status bar
	even if --enable-gnome is used

	* app/menus.c: menu fixes for --enable-gnome

	* app/commands.c (file_open_dialog_ok_callback): fixed up
	menus when --enable-gnome is used
	(file_export_to_eps_callback): set a default file name
	when dialog is created

1999-02-27  Alexander Larsson  <alex@c125.ryd.student.liu.se>

	* objects/UML/association.c (association_create):
	Fixed usage of not initialized variable.
	Pointed out by Seth Alves <alves@hungry.com>.

1999-02-24  Alexander Larsson  <alex@c125.ryd.student.liu.se>

	* configure.in:
	Fixed detection of gnome-xml.
	From Valtteri Vuorikoski <vuori@k.notcom.org>.
	
	* app/app_procs.c:
	Fixed error detection on dlsym calls. 
	From Valtteri Vuorikoski <vuori@k.notcom.org>.

1999-02-23  Alexander Larsson  <alla@lysator.liu.se>

	* objects/UML/message.c (fill_in_dialog):
	Fixed warnings.

1999-02-22  Lars Clausen  <lrclause@shasta.cs.uiuc.edu>

	* objects/standard/zigzagline.c:
	* objects/standard/polyline.c:
	* objects/standard/line.c:
	* objects/standard/arc.c:
	* lib/widgets.h:
	* lib/arrows.h:
	* lib/widgets.c:
	Support for sizeable arrows. 

	* objects/standard/box.c:
	* objects/standard/ellipse.c:
	* objects/standard/image.c:
	Changed creation handle to lower-right.
	Transparent box/ellipse.
	
	* objects/standard/image.c:
	Better layout of properties boxes.

1999-02-20  Alejandro Aguilar Sierra  <asierra@servidor.unam.mx>

	* objects/UML/message.c (fill_in_dialog): 
	Fixed dialog fill in. Common dialog for all messages.

	* objects/UML/object.c: 
	Added multiple instance. Dialog related bugs fixed.
	Common dialog for all instances. Completed copy and destroy.

	* objects/UML/lifeline.c (lifeline_load): 
	Conn initialization bug fixed and few bad loading prevention flags.
	Common dialog for all lifeline objects.
	